(Dis donc emacs, ceci est du -*-text-*- !)

		      LIST OF CHANGES
		      ===============

  o added targets "install-byte" and "dist-clean" in Makefile

version 1.2, 14/01/2002
=======================
  o single-character identifiers now indexed
  o port to ocaml 3.04 and adequacy to ocaml 3.04 parser
  o fixed bugs in ocamlweb.sty (thanks to Ralf Treinen)

version 1.1, 20/09/2001
=======================
  o fixed bug in module indexing
  o make LaTeX output the name of the latex file being typeset
  o better redirections of messages/errors from LaTeX/dvips/hevea 
  o LaTeX messages now displayed (with -dvi,-ps), unless -q
  o big sections with (*S
  o nicer pretty-print of [< and >]

version 1.0, 15/06/2001 
=======================
  o option --hevea-option to pass an option to hevea
  o escaped dollar sign in comments / documentation
  o fixed bug with yacc token 'error'
  o adequacy to ocaml 3.01 parser
  o options -dvi, -ps and -html to produce DVI, PS and HTML directly
  o page style with headings (thanks to Ralf Treinen)
  o insertion into LaTeX preamble with option -p and (*p
  o macros \ocwbegincode and \ocwendcode before and after code pieces
    (no more use of \codeline and \endcodeline)

version 0.9, 18/12/2000
=======================
  o support for lex and yacc files (-impl option deprecated on these files)
  o when not in WEB style, index is by pages by default
  o noweb style is used if no sectioning command (*s at all
    so that ocamlweb can be used naively as a pretty-printer
  o option -latex-sects renamed into -noweb
  o bytecode compilation if no ocamlopt available
  o adequacy to ocaml 3.00 parser; labels are now indexed
  o installation: $(BINDIR) and $(TEXDIR) created if they don't exist
  o a comment in the LaTeX file now indicates that it is a generated
    file and gives the command line

version 0.8, 02/06/2000
======================= 
  o configuration with autoconf (thanks to Luc MAZARDO)